--- a/about_style.css
+++ b/about_style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: lightblue;
-	background-image: url("C:/Users/School234/Documents/GitHub/angellicode.github.io/code.jpg");
+	background-image: url("code.jpg");
 	overflow-x: hidden;
 }
 
