--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
 	background-color: lightblue;
-	background-image: url("C:/Users/School234/Documents/GitHub/angellicode.github.io/code.jpg");
+	background-image: url("code.jpg");
 	overflow-x: hidden;
 }
 
