--- a/works_style.css
+++ b/works_style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: lightblue;
-	background-image: url("code.jpg");
+	background-image: url("/code.jpg");
 	overflow-x: hidden;
 }
 
