--- a/main_menu_blocky_style.css
+++ b/main_menu_blocky_style.css
@@ -24,7 +24,7 @@ body {
 	position: absolute; 
 	left: 20%; 
 	background-color: orange;
-	background-image: url("/sky.png");
+	/*background-image: url("C:/Users/School234/Documents/GitHub/angellicode.github.io/sky.png");*/
 	width: 800px;
 	height: 600px;
 }
@@ -56,7 +56,7 @@ body {
 	height: 50px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	position: absolute;
-	left:5%;
+	left:0;
 	top: 58.9%;
 	
 }
