--- a/main_menu_blocky_style.css
+++ b/main_menu_blocky_style.css
@@ -95,3 +95,7 @@ h3 {
 	color: white;
 	font-size: 30px;
 }
+
+.rocket {
+	background-image: url("C:/Users/School234/Documents/GitHub/angellicode.github.io/rocket.png");
+}
