--- a/main_menu_blocky_style.css
+++ b/main_menu_blocky_style.css
@@ -61,6 +61,19 @@ body {
 	
 }
 
+.meanBlock{
+	background-color: blue;
+	width: 50px;
+	height: 50px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	position: absolute;
+	right:0;
+	top: 58.9%;
+	animation: meanBlockWalk 2s;
+	animation-fill-mode: forwards;
+	
+}
+
 .jumpingBlock {
 	background-color: green;
 	width: 50px;
@@ -88,6 +101,15 @@ body {
 
 @keyframes pauseIt {
 	
+}
+
+@keyframes meanBlockWalk {
+	
+	0%{right: 0;}
+	25%{right: 100;}
+	50%{right: 250;}
+	75%{right: 350;}
+	100%{right: 500;}
 }
 
 h3 {	
