--- a/photographer.css
+++ b/photographer.css
@@ -1,3 +1,6 @@
+/*--WEBSITE TEMPLATE--*/
+/*!--CODE  WRITTEN BY ANGELLICA B. 2019--*/
+/*STYLESHEET*/
 body {
 	background-color: black;
 	overflow-x: hidden;
