--- a/about_style.css
+++ b/about_style.css
@@ -1,3 +1,6 @@
+/*--ANGELLICA'S WEBSITE--*/
+/*!--CODE  WRITTEN BY ANGELLICA B. 2019--*/
+/*STYLESHEET*/
 body {
 	background-color: lightblue;
 	background-image: url("/code.jpg");
