--- a/works_style.css
+++ b/works_style.css
@@ -68,6 +68,15 @@ a {
 	height: 250px;
 }
 
+.portfolioThree {
+	background-color: rgb(99,227,130,0.8);
+	position: absolute;
+	left: 65%;
+	bottom: 20%;
+	width: 300px;
+	height: 250px;
+}
+
 .portfolioOne:hover {
 	background-color: rgb(99,227,130);
 }
