--- a/about_style.css
+++ b/about_style.css
@@ -41,6 +41,7 @@ a {
 
 .cur {
 	animation: cursoranim 2s infinite;
+	-webkit-animation: cursoranim 2s infinite;
 	position: relative;
 	z-index: 3;
 	float: right;
