--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ a {
 
 .cur {
 	animation: cursoranim 2s infinite;
+	-webkit-animation: cursoranim 2s infinite;
 	position: relative;
 	z-index: 3;
 	float: right;
@@ -54,6 +55,7 @@ a {
 	background-color: skyblue;
 	position: absolute; bottom: 50%;left: 35%;
 	animation: loadinganim1 4s forwards;
+	-webkit-animation: loadinganim1 4s forwards;
 	font-family: Arial, sans-serif;
 	color:white;
 	text-align: center;
@@ -67,6 +69,7 @@ a {
 	border-radius: 50%;
 	background-color: skyblue;
 	animation: loadinganim2 4s forwards;
+	-webkit-animation: loadinganim2 4s forwards;
 	position: absolute; bottom: 50%;left: 40%;
 	font-family: Arial, sans-serif;
 	color:white;
@@ -80,6 +83,7 @@ a {
 	border-radius: 50%;
 	background-color: skyblue;
 	animation: loadinganim1 4s forwards;
+	-webkit-animation: loadinganim1 4s forwards;
 	position: absolute; bottom: 50%;left: 45%;
 	font-family: Arial, sans-serif;
 	color:white;
@@ -93,6 +97,7 @@ a {
 	border-radius: 50%;
 	background-color: skyblue;
 	animation: loadinganim2 4s forwards; 
+	-webkit-animation: loadinganim2 4s forwards; 
 	font-family: Arial, sans-serif;
 	color:white;
 	position: absolute; bottom: 50%;left: 50%;
