--- a/main_menu_blocky_style.css
+++ b/main_menu_blocky_style.css
@@ -91,8 +91,7 @@ body {
 	position: absolute;
 	right:0;
 	top: 58.9%;
-	animation: meanBlockWalk 2s;
-	animation-fill-mode: forwards;
+	/*animation-fill-mode: forwards;*/
 	
 }
 
