--- a/works_style.css
+++ b/works_style.css
@@ -23,7 +23,7 @@ a {
 }
 
 .menu {
-	background-color: rgb(220,20,60,0.29);
+	background-color: rgba(220,20,60,0.29);
 	width: 100%;
 	height: 10%;
 	position: fixed;
@@ -47,12 +47,12 @@ a {
 
 .bgGreen {
 
-	background-color: rgb(50,205,50,0.5);
+	background-color: rgba(50,205,50,0.5);
 	position: absolute;
 }
 
 .portfolioOne {
-	background-color: rgb(99,227,130,0.8);
+	background-color: rgba(99,227,130,0.8);
 	position: absolute;
 	left: 5%;
 	bottom: 20%;
@@ -61,7 +61,7 @@ a {
 }
 
 .portfolioTwo {
-	background-color: rgb(250,232,81,0.8);
+	background-color: rgba(250,232,81,0.8);
 	position: absolute;
 	left: 35%;
 	bottom: 20%;
@@ -70,7 +70,7 @@ a {
 }
 
 .portfolioThree {
-	background-color: rgb(99,227,130,0.8);
+	background-color: rgba(99,227,130,0.8);
 	position: absolute;
 	left: 65%;
 	bottom: 20%;
@@ -79,14 +79,14 @@ a {
 }
 
 .portfolioOne:hover {
-	background-color: rgb(99,227,130);
+	background-color: rgba(99,227,130);
 }
 
 .portfolioTwo:hover {
-	background-color: rgb(250,81,191);
+	background-color: rgba(250,81,191);
 }
 
 .portfolioOne:hover {
-	background-color: rgb(99,227,130);
+	background-color: rgba(99,227,130);
 }
 
