--- a/style.css
+++ b/style.css
@@ -5,20 +5,24 @@ body {
 
 h1 {	
 	font-family: Courier, sans-serif;	
-	color: white;
+	color: black;
 	font-size: 150px;
 }
 h2 {	
 	font-family: Courier, sans-serif;	
-	color: white;
+	color: black;
+	font-weight: lighter;
 	font-size: 50px;
 }
 
+#logo {
+
+}
 
 a {	
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;	
+	font-family: Courier, sans-serif;
 	color:black;
-	font-size: 35px;
+	font-size: 20px;
 }
 
 a:hover {
@@ -141,9 +145,17 @@ a:hover {
 .menu {
 	background-color:rgb(216, 240, 128);
 	width: 100%;
-	height: 5%;
+	height: 3%;
 	left: 0;
 	position: fixed;
-	top:10%;
+	top:12%;
 
+}
+
+#intro {
+
+	padding-left: 0%;
+	padding-top: 0%;
+	width: 100%;
+	float: right;
 }
